--- a/Hyphenate.iOS.UI/Hyphenate.iOS.UI.csproj
+++ b/Hyphenate.iOS.UI/Hyphenate.iOS.UI.csproj
@@ -12,7 +12,7 @@
     <AssemblyName>Hyphenate.iOS.UI</AssemblyName>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <PackageId>Hyphenate.iOS.UI</PackageId>
-    <PackageVersion>3.5.2.4</PackageVersion>
+    <PackageVersion>3.5.2.5</PackageVersion>
     <Authors>YinCheng</Authors>
     <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
     <Owners>YinCheng</Owners>
@@ -25,7 +25,23 @@
 4. 解决一些协议Protocol无法被类对象进行转换的问题</PackageReleaseNotes>
     <PackageTags>Xamarin.iOS, Hyphenate, EaseUI</PackageTags>
     <Title>Hyphenate.iOS.UI</Title>
-    <Description>Xamarin Binding for Hyphenate EaseUI 3.5.2(4)</Description>
+    <Description>Xamarin Binding for Hyphenate EaseUI 3.5.2(5)
+架构支持x86_64 arm64
+
+- 添加NullAllowed修饰
+- 解决一些对象无法转换为协议的问题
+- 添加WeakDataSource
+
+Note:
+解决iPhone真机无法编译调试问题
+请参考https://github.com/xamarin/xamarin-macios/issues/5624
+
+修改.csproj，添加
+&lt;Target Name="BeforeCodesign"&gt;
+    &lt;Exec Condition=" '$(Platform)' == 'iPhone' Command="\usr\bin\codesign -v --force --sign $(_CodeSigningKey) --timestamp=none $(ProjectDir)/$(AppBundleDir)/Frameworks/UmbrellaFramework.framework/Frameworks/SubFramework.framework/SubFramework" /&gt;
+&lt;/Target&gt;
+
+</Description>
     <PackOnBuild>true</PackOnBuild>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -58,7 +74,7 @@
       <HintPath>..\packages\Ricardo.MWPhotoBrowser.iOS.2.1.4.1\lib\Xamarin.iOS10\Ricardo.MWPhotoBrowser.iOS.dll</HintPath>
     </Reference>
     <Reference Include="Hyphenate.iOS">
-      <HintPath>..\packages\Hyphenate.iOS.Lib.3.5.2.2\lib\xamarinios10\Hyphenate.iOS.dll</HintPath>
+      <HintPath>..\packages\Hyphenate.iOS.Lib.3.5.2.3\lib\xamarinios10\Hyphenate.iOS.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
